fixed top spacing of table in dimensions tab

--- a/src/static/src/scss/pages/_reports-page.scss
+++ b/src/static/src/scss/pages/_reports-page.scss
@@ -170,6 +170,10 @@ $recommendation-cta-bg-color: #fff;
       margin: 0;
       padding: 0;
     }
+
+     > .h-c-grid {
+      margin-bottom: 92px;
+    }
   }
 
   // Mobile
